--- a/package.json
+++ b/package.json
@@ -11,26 +11,16 @@
   },
   "dependencies": {
     "ably": "^1.2.15",
-    "alby": "^1.0.1",
-    "archiver": "^5.3.0",
     "b2-cloud-storage": "^1.0.5",
     "base64-encode-decode": "^0.0.3",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
-    "easy-backblaze": "^2.0.1",
     "formidable": "^2.0.1",
-    "multer": "^1.4.4",
-    "multiparty": "^4.2.2",
     "next": "^12.0.3",
-    "node-zip": "^1.1.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-customizable-progressbar": "^1.2.0",
-    "react-dom": "17.0.2",
-    "socket.io": "^4.5.4",
-    "socket.io-client": "^4.5.4",
-    "utf8-encoder": "^1.0.1",
-    "zip-lib": "^0.7.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
