--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "6.11.1"
+    "node": "6.11.1",
+    "npm": "9.8.1"
   },
   "scripts": {
     "dev": "next dev",
